Fri Aug 31 18:12:05 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/xdmcp.c:  Add an
	  xdmcp/Willing script configuration option.  To run a script
	  when the system gets the QUERY command.

	* daemon/gdm.c: Fix checks for the chooser and greeter binaries

	* gui/gdmconfig.{glade,c}:  Add configuration for the Willing
	  thing

	* docs/C/gdm.sgml:  Document some of the new configuration keys.
	  Not everything is documented yet.

Fri Aug 31 17:04:02 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c: Fix reading and changing servers with respect
	  to server numbers.  All server numbers are now normalized and
	  they equal the actual row (such assumptions were made before,
	  but were not enforced).  Also fix some memory leaks.

Fri Aug 31 16:34:58 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c: fix writing of servers to config file

2001-08-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_TW.Big5 -> zh_TW

Tue Aug 28 23:17:41 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: s/login/username/ one more time, and in XDMCP
	  mode call it "Disconnect" not "Quit", but in flexi mode, it should
	  still be "Quit".

Tue Aug 28 19:23:34 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: redo restart logic to be a lot smarter and not hang
	  on leftover fifo's

Tue Aug 28 17:37:12 2001  George Lebl <jirka@5z.com>

	* Release 2.2.4.0

2001-08-27  Abel Cheung  <maddog@linux.org.hk>

	* daemon/filecheck.c (gdm_file_check): make the meaning of a syslog
	  string a bit clearer. (hope not in string freeze now)

Sun Aug 26 01:45:33 2001  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/cookie.c:   Minor cleanup and paranoia

	* daemon/gdm-net.[ch], daemon/gdm.[ch], daemon/server.c,
	  daemon/slave.[ch]: The daemon now keeps track of the cookies in 
	  text form at least so that it can do authentication of it's own.
	  FLEXI_XSERVER now requires an "authenticated" socket connection