@@ -8,6 +8,8 @@ Ahh news...
 - X server editting now enforces strict order of servers (it only sort
   of did before)
 
+- XDMCP can now run a script to get a custom WILLING status script
+
 - Fix one case of s/login/username/ in the greeter and in XDMCP mode,
   the button to kill the login is "Disconnect" and not "Quit"
 
