@@ -1,3 +1,8 @@
+Fri Aug 31 18:21:46 2001  George Lebl <jirka@5z.com>
+
+	* daemon/xdmcp.c: run the Willing script at most once every 3
+	  seconds.  That way we can prevent some DOS attacks.
+
 Fri Aug 31 18:12:05 2001  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in, daemon/gdm.[ch], daemon/xdmcp.c:  Add an
